--- a/GestionHospital/GestionHospital.csproj
+++ b/GestionHospital/GestionHospital.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cita.cs" />
+    <Compile Include="GestionCitas.cs" />
+    <Compile Include="GestionPersonal.cs" />
     <Compile Include="Hospital.cs" />
     <Compile Include="Medico.cs" />
     <Compile Include="Paciente.cs" />
